--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -35,6 +35,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@main
+    - name: Setup Debug Session
+      uses: csexton/debugger-action@master
 
     - name: Initialization environment
       env:
