--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -59,11 +59,11 @@ jobs:
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
     - name: Clone source code
-      working-directory: /workdir
+      working-directory: /mnt
       run: |
-        df -hT $PWD
+        df -hT
         git clone $REPO_URL -b $REPO_BRANCH openwrt
-        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+        ln -sf /mnt/openwrt $GITHUB_WORKSPACE/openwrt
 
     - name: Load custom feeds
       run: |
