--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -30,9 +30,11 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
+    - name: Setup Debug Session
+      uses: csexton/debugger-action@master
     - name: Checkout
       uses: actions/checkout@main
 
