--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -15,7 +15,9 @@ name: OpenWrt Builder
 on:
   repository_dispatch:
   workflow_dispatch:
-
+  schedule:
+    - cron: "0 2 */14 * *"
+    
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
